@@ -1,3 +1,9 @@
+2008-12-18  kokosabu  <kokosabu@gmail.com>
+
+        * Fixed: fxdiv, fxmod, fxdiv0, fxmod0.
+
+        * Makefile.am: '/usr/local/bin/re2c' to 're2c'.
+
 2009-01-05  higepon  <higepon@users.sourceforge.jp>
 
         * lib/mosh/shell.scm (shell-utilities): Added (experimental).
